--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="refresh">
         <button class="btn btn-dark btn-large but" type="button" onclick="window.location.reload()">Refresh Me</button>
     </div>
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
